2010-06-26  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * src/ao_xmltagging.c:
   Only use part of inserted tag until first white space character for
   closing tag so e.g. inserting 'span class=foo"' is working properly.
 * src/addons.c:
   Fix an issue that prevent xmltagging keybinding to be turned on/off.


2010-05-30  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/addons.c:
   Use the new PLUGIN_SET_TRANSLATABLE_INFO() macro.


2010-05-15  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * src/ao_xmltagging.[c|h]:
   Add function for setting tags around a selection.


2010-01-17  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/addons.c, src/ao_tasks.c, src/ao_tasks.h:
   Use the new "geany-startup-complete" signal to initially update
   the tasks list.


2010-01-10  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * AUTHORS, README, src/ao_blanklines.c, src/ao_blanklines.h,
   src/Makefile.am, src/addons.c:
   Add new addon 'Strip trailing blank lines' by Eugene Arshinov,
   thanks.
 * src/ao_tasks.c:
   Restore the selected task when the list is updated
   (part of #2911086).


2010-01-03  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/ao_tasks.c:
   Move the code for creating a new task into create_task().
   Strip the token from the displayed task description to be closer
   to the initial implementation (closes #2925003).
   Add a new column to the tasks list showing the used type (keyword).


2010-01-01  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/*.c, src/*.h:
   Update copyright information.
 * src/ao_bookmarklist.c:
   Fix warning if the bookmark list is disabled.
 * src/ao_tasks.c:
   Implement a Delete menu item for the tasks list popup menu to easily
   delete tasks (closes #2911105).
   List tasks only once per line even if there were more than
   one matching token.
 * src/addons.c, src/ao_tasks.c, src/ao_tasks.h:
   Add an option to define whether all open documents or only the